API update and pw encryption
