# backend/src/db/entities/user.entity.ts
@@ -6,5 +6,7 @@ export class User {
   @Column()
   name: string;
   @Column()
+  password: string;
+  @Column()
   iscoach: boolean;
 }
